[tool.poetry]
name = "pytorch-101"
version = "0.1.0"
description = ""
authors = ["Luis Ek <52711401+lek18@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pytorch_101"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
matplotlib = "^3.7.1"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pylint = "^2.17.1"
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
